recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:15: error: identifier expected but ':' found.
    snowSide(levels-1:Int, length/3.:Double);
                                    ^Koch:17: error: identifier expected but ':' found.
    snowSide(levels-1:Int, length/3.:Double);
                                    ^